--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,6 +77,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - run: cargo install diesel_cli
       - name: Set up environment
         run: cp .env.template .env
       - uses: actions-rs/cargo@v1
